# tau-reader

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
src/: aws_access.rs  lib.rs  main.rs  offsets.rs  parameters.rs
